--- a/atox/src/main/res/layout/chat_fragment.xml
+++ b/atox/src/main/res/layout/chat_fragment.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <android.widget.Toolbar android:id="@+id/toolbar"
+    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
@@ -35,7 +35,7 @@
                     android:singleLine="true"
                     tools:text="clever subtitle"/>
         </LinearLayout>
-    </android.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <ListView android:id="@+id/messages"
             android:layout_width="0dp"
