--- a/atox/src/main/res/layout/add_contact_fragment.xml
+++ b/atox/src/main/res/layout/add_contact_fragment.xml
@@ -27,6 +27,28 @@
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             tools:targetApi="26"/>
 
+    <TextView android:id="@+id/invitation_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/toxId"
+        android:singleLine="true"
+        android:text="Invitation message:"/>
+
+    <TextView android:id="@+id/n_characters"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/invitation_title"
+        app:layout_constraintTop_toBottomOf="@+id/toxId"
+        android:hint="0/0"/>
+
+
     <EditText android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,13 +61,25 @@
             android:lines="5"
             android:text="@string/add_contact_message_default"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintTop_toBottomOf="@id/toxId"
+            app:layout_constraintTop_toBottomOf="@id/n_characters"
             tools:targetApi="26"/>
 
+
+    <Button android:id="@+id/read_qr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Read QR CODE"
+        app:layout_constraintTop_toBottomOf="@id/message"/>
+
     <Button android:id="@+id/add"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/add"
+            android:text="Add contact"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="@id/message"
-            app:layout_constraintTop_toBottomOf="@id/message"/>
+        app:layout_constraintTop_toBottomOf="@id/read_qr"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
