--- a/atox/src/main/res/layout/contact_list_view_item.xml
+++ b/atox/src/main/res/layout/contact_list_view_item.xml
@@ -5,6 +5,7 @@
         android:id="@+id/contactListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp">
     <include android:id="@+id/profileImageLayout" layout="@layout/profile_image_layout"/>
 
