--- a/atox/src/main/res/layout/fragment_settings.xml
+++ b/atox/src/main/res/layout/fragment_settings.xml
@@ -173,16 +173,13 @@
                                 style="@style/OptionItemText"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="@string/pref_udp_enabled"
-                                app:layout_constraintEnd_toStartOf="@id/settings_udp_enabled"
+                                android:text="@string/pref_network_mode"
+                                app:layout_constraintEnd_toStartOf="@id/setting_network_mode"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"/>
-                        <androidx.appcompat.widget.SwitchCompat
-                                android:id="@+id/settings_udp_enabled"
+                        <Spinner android:id="@+id/setting_network_mode"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:layout_marginEnd="8dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"/>
