Redesigned profile view screen + Related code cleanup
Redesigned the profile view screen and cleaned up some related code.
The edit profile view is to be implemented.

--- a/atox/src/main/res/drawable/side_nav_bar_background.xml
+++ b/atox/src/main/res/drawable/side_nav_bar_background.xml
@@ -3,7 +3,7 @@
     <gradient
             android:angle="135"
             android:centerColor="@color/colorPrimary"
-            android:endColor="@color/colorPrimaryDark"
+            android:endColor="@color/colorPrimary"
             android:startColor="@color/colorPrimaryLight"
             android:type="linear"/>
 </shape>
