--- a/atox/src/main/res/layout/fragment_chat.xml
+++ b/atox/src/main/res/layout/fragment_chat.xml
@@ -7,7 +7,7 @@
     <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="?attr/colorSurface"
             android:elevation="16dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/send"
                 android:paddingHorizontal="4dp"
-                android:src="@drawable/send"
+                android:src="@drawable/ic_send"
                 android:visibility="gone"
                 app:tint="@color/colorPrimary"/>
 
@@ -88,6 +88,6 @@
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/attach_file"
                 android:paddingHorizontal="4dp"
-                android:src="@drawable/attach_file"/>
+                android:src="@drawable/ic_attach_file"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
