--- a/atox/src/main/res/layout/fragment_contact_list.xml
+++ b/atox/src/main/res/layout/fragment_contact_list.xml
@@ -12,12 +12,12 @@
         <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fitsSystemWindows="true"
-                android:theme="@style/AppTheme.AppBarOverlay">
+                android:theme="@style/Theme.aTox.AppBarOverlay">
             <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                    android:background="?attr/colorSurface"
+                    app:popupTheme="@style/Theme.aTox.PopupOverlay"/>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
