--- a/atox/src/main/res/values-v23/styles.xml
+++ b/atox/src/main/res/values-v23/styles.xml
@@ -5,7 +5,8 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:statusBarColor">@android:color/background_dark</item>
+        <item name="android:statusBarColor">?attr/colorSurface</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.aTox.DayNight.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
