--- a/atox/src/main/res/values/styles.xml
+++ b/atox/src/main/res/values/styles.xml
@@ -1,11 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+
+    <style name="Theme.aTox.DayNight" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="Theme.aTox.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
+    <style name="Theme.aTox.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light"/>
 
     <style name="OptionGroup">
         <item name="android:layout_width">match_parent</item>
@@ -36,7 +38,7 @@
         <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
     </style>
 
-    <style name="DialogSlideAnimation" parent="Theme.AppCompat.Dialog">
+    <style name="DialogSlideAnimation" parent="Theme.MaterialComponents.Dialog">
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
     </style>
 </resources>
