--- a/atox/src/main/res/layout/fragment_settings.xml
+++ b/atox/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="?attr/colorSurface"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:title="@string/settings"/>
 
