Added edit profile screen + related code cleanup
Added an edit profile screen for editing the user profile. The screen has a dropdown for changing the status and a nice dialog for changing the name and the status message.
Also a lot of related code clean up.

--- a/atox/src/main/res/layout/dialog_status.xml
+++ b/atox/src/main/res/layout/dialog_status.xml
@@ -151,7 +151,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="@drawable/circle"
-            android:backgroundTint="@color/colorAccent"
+            android:backgroundTint="@color/colorSecondary"
             android:baselineAligned="false"
             android:elevation="4dp"
             android:focusable="false">
