--- a/atox/src/main/res/drawable/side_nav_bar_background.xml
+++ b/atox/src/main/res/drawable/side_nav_bar_background.xml
@@ -4,6 +4,6 @@
             android:angle="135"
             android:centerColor="@color/colorPrimary"
             android:endColor="@color/colorPrimary"
-            android:startColor="@color/colorPrimaryLight"
+            android:startColor="@color/colorSecondary"
             android:type="linear"/>
 </shape>
